test/e2e/fail/001-type-mismatch/expected.stderr
error[E0001]: type mismatch
 --> $FILE:1:1
  |
1 | let x: Int = true;
  | ^^^^^^^^^^^^^^^^^^ expected `Int`, found `Bool`
  |
